# NeoRPC

./: .gitignore  CMakeLists.txt  README.md
include/: Acceptor.hpp  Command.hpp  CommandList.def  Conn.h  EventLoop.hpp  LogicHandler.hpp  ServiceRegistry.hpp  Task.hpp  TcpServer.h  UniqueFd.hpp  utils.hpp
include/commands/: AddCommand.hpp  EchoCommand.hpp  PingCommand.hpp  StatsCommand.hpp  SubCommand.hpp  TimeCommand.hpp
include/services/: StatsService.hpp
src/: Conn.cpp  LogicHandler.cpp  TcpServer.cpp  main.cpp
tools/: echo_bench.py  plot_bench.gp
